exports[`analysis rest endpoint should add model 1`] = `
Array [
  Object {
    "__v": 0,
    "calculationStatus": "calculating",
    "name": "test-analysis",
    "numCommuters": 1,
    "summary": Object {
      "avgDistance": 0,
      "avgTravelTime": 0,
      "savingsPerTrip": 0,
      "savingsPerTripYear": 0,
      "savingsTotalPerDay": 0,
      "savingsTotalPerYear": 0,
    },
  },
]
`;

exports[`analysis rest endpoint should get model 1`] = `
Object {
  "__v": 0,
  "calculationStatus": "calculating",
  "name": "test-analysis",
  "numCommuters": 1,
  "summary": Object {
    "avgDistance": 0,
    "avgTravelTime": 0,
    "savingsPerTrip": 0,
    "savingsPerTripYear": 0,
    "savingsTotalPerDay": 0,
    "savingsTotalPerYear": 0,
  },
}
`;
